--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -19,7 +19,7 @@ errors:
 
 loginPrompt: "$pluginPrefix &9Enter your password in chat to continue playing.
 If you forgot your password, contact someone with access to the files of the server."
-passwordCreatePrompt: "$pluginPrefix &c1et a password to continue playing, using /password set (password)"
+passwordCreatePrompt: "$pluginPrefix &cSet a password to continue playing, using /password set (password)"
 
 success:
   loginAreaChanged: "$pluginPrefix &aLogin area successfully changed!"
